# demo_2023_10

./: README.md
Buckets實驗/: buckets站點.md  get_file.py  main.py  upload_file.py
airflow/: 使用說明.md
airflow/airflow_docker/: .start.sh.swp  airflow.cfg  airflow.cfg 模板.txt  docker-compose.yml  start.sh
airflow_docker/: AIRFLOW_總體說明文件.md  airflow.cfg  api說明.md  docker-compose.yml  init.sql  說明.md
airflow_docker/image/: .$流程圖.drawio.bkp  流程圖.drawio
airflow_docker/work/: init.sh  start.sh
chain_test/: 測試套件化功能.md
chain_test/rag_chain/: pyproject.toml
chain_test/rag_chain/src/rag_chain/core/: config.py
chain_test/rag_chain/src/rag_chain/db/: __init__.py  database.py  models.py  operations.py  session.py
chain_test/rag_chain/src/rag_chain/gcp_integration/: secrets.py
chain_test/rag_chain/src/rag_chain/openai_integration/: __init__.py  embeddings.py  openai_client.py
chain_test/rag_chain/src/rag_chain/text_processing/: __init__.py  chunking.py
chain_test/rag_chain/src/rag_chain/utils/: logging_utils.py
dagster_server/: README.md  dagster.yaml  pyproject.toml  setup.cfg  setup.py  說明.md
dagster_server/.telemetry/: id.yaml
dagster_server/dagster_server/: __init__.py  api_link.py  mydag.py  schedules.py
dagster_server/history/: runs.db
prefect_dbt_server/: prefect_docker_compose.md
vue3/: package-lock.json  vue3_說明.md
其他研究文檔/: LangChain.md  PRESTO 安裝.md  Presto 連接 BigQuery.md  RAG結構.md  SQL資料庫選擇.md  Trino & Presto 比較表.md  Trino 安裝.md  presto查詢與運用.md  redshift測試結果.md
向量資料庫實驗/: demo.py  資料庫設定.md
構思/: OrbitCommune_cn.md  OrbitCommune_en.md
(+120 files in other folders)
